prevent wrap

--- a/themes/greatermedia/assets/css/sass/components/_personalities.scss
+++ b/themes/greatermedia/assets/css/sass/components/_personalities.scss
@@ -52,6 +52,11 @@ category: Components - Shows
 }
 
 .personality__meta {
-	// float: none;
-	// width: auto;
+	@include span-columns(8 of 12);
+	@include omega;
+
+	@include bp(medium) {
+		@include span-columns(9 of 12);
+		@include omega;
+	}
 }
